force-app/main/default/objects/Retail_Sales__c/Retail_Sales__c.object-meta.xml
<CustomObject>
    <description>Sales data loaded from Fact Retail Sales in the EDW</description>
    <label>Retail Sales</label>
    <nameField>
        <label>Retail Sales</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retail Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>