force-app/main/default/objects/Retail_Sales__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Product Category</description>
    <inlineHelpText>Product Category</inlineHelpText>
    <label>Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>