force-app/main/default/objects/Retail_Sales__c/fields/Gross_Subsidy_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Subsidy_Amount__c</fullName>
    <label>Gross Subsidy Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>