force-app/main/default/objects/Retail_Sales__c/fields/IA_Account__c.field-meta.xml
<CustomField>
    <fullName>IA_Account__c</fullName>
    <label>IA Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Industrial Account Sales</relationshipLabel>
    <relationshipName>Industrial_Account_Sales</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>