force-app/main/default/objects/Retail_Sales__c/fields/IA_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>IA_Account_Number__c</fullName>
    <formula>IA_Account__r.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IA Account Number</label>
    <type>Text</type>
</CustomField>