force-app/main/default/objects/Retail_Sales__c/fields/Invoice_Attribute_2_Content__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Attribute_2_Content__c</fullName>
    <description>Invoice Attribute 2 Content</description>
    <label>Invoice Attribute 2 Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>