force-app/main/default/objects/Retail_Sales__c/fields/Invoice_Attribute_3_Label__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Attribute_3_Label__c</fullName>
    <description>Invoice Attribute 3 Label</description>
    <label>Invoice Attribute 3 Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>