force-app/main/default/objects/Retail_Sales__c/fields/Invoice_Attribute_Label_1__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Attribute_Label_1__c</fullName>
    <description>Invoice Attribute 1</description>
    <label>Invoice Attribute 1 Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>