force-app/main/default/objects/Retail_Sales__c/fields/Net_Sales_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Sales_Amount__c</fullName>
    <label>Net Sales Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>