force-app/main/default/objects/Retail_Sales__c/fields/Price_Amount__c.field-meta.xml
<CustomField>
    <fullName>Price_Amount__c</fullName>
    <label>Price Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>