force-app/main/default/objects/Retail_Sales__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Retail Sales</relationshipLabel>
    <relationshipName>Retail_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>