force-app/main/default/objects/Retail_Sales__c/fields/Register_Number__c.field-meta.xml
<CustomField>
    <fullName>Register_Number__c</fullName>
    <label>Register Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>