force-app/main/default/objects/Retail_Sales__c/fields/Sold_From__c.field-meta.xml
<CustomField>
    <fullName>Sold_From__c</fullName>
    <label>Sold From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Store</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>