force-app/main/default/objects/Retail_Sales__c/fields/Store_Account__c.field-meta.xml
<CustomField>
    <fullName>Store_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Retail Sales (Store Account)</relationshipLabel>
    <relationshipName>Retail_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>