force-app/main/default/objects/Retail_Sales__c/fields/Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Number__c</fullName>
    <label>Transaction Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>