force-app/main/default/objects/Retail_Sales__c/fields/Wholesale_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_Account_Number__c</fullName>
    <description>M3 Account Number</description>
    <label>Wholesale Account Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>